<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpng"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/overbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overbox"
        android:elevation="3dp"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/modal"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bgmodal"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/overbox">

        <TextView
            android:id="@+id/SaskianSartuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_SaskianSartuTitle"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SaskianSartuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="12dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/eu_SaskianSartuText"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/SaskianSartuQuantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/eu_SaskianSartuQuantity"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/SaskianSartuAccept"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/eu_SaskianSartuAccept" />

            <Button
                android:id="@+id/SaskianSartuClose"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/eu_SaskianSartuClose" />
        </LinearLayout>

    </LinearLayout>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="220dp"-->
<!--        android:layout_height="220dp"-->
<!--        app:cardCornerRadius="30dp"-->
<!--        android:layout_margin="5dp"-->
<!--        android:elevation="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.068">-->

        <ImageView
            android:id="@+id/ProdImg"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="@drawable/border"
            android:contentDescription="@string/eu_ProdImg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068" />

<!--    </androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/ProdName"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/eu_ProdName"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ProdCat"
        android:text="@string/eu_ProdCat"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ProdPrice"
        android:text="@string/eu_ProdPrice"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/texPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textCategoria"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/texPrecio"
        android:layout_width="186dp"
        android:layout_height="47dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <ImageView
        android:id="@+id/addCarrito"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/eu_AddCarrito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_carrito_48"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>